--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -13,9 +13,12 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+    implementation group: 'org.springframework.data', name: 'spring-data-redis', version: '2.4.6'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-websocket'
+    implementation group: 'commons-io', name: 'commons-io', version: '2.6'
+    implementation group: 'redis.clients', name: 'jedis', version: '3.3.0'
+    implementation group: 'org.apache.commons', name: 'commons-csv', version: '1.8'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
