--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -19,6 +19,7 @@ dependencies {
     implementation group: 'commons-io', name: 'commons-io', version: '2.6'
     implementation group: 'redis.clients', name: 'jedis', version: '3.3.0'
     implementation group: 'org.apache.commons', name: 'commons-csv', version: '1.8'
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-webflux', version: '2.5.3'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
