--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -1,3 +1,4 @@
+targetCompatibility = JavaVersion.VERSION_16
 plugins {
     id 'org.springframework.boot' version '2.4.4'
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
@@ -6,7 +7,7 @@ plugins {
 
 group = 'xyz.engsmyre'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '11'
+sourceCompatibility = "16"
 
 repositories {
     mavenCentral()
