--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -2,5 +2,5 @@ server.port=8080
 logging.level.root = debug
 spring.profiles.active=development
 
-tmdb.api_key = ${TMDB_API_KEY:secret}
+tmdb.api_key = ${TMDB_API_KEY:d4e03ad6d78b637ae193537745b35f0d}
 tmdb.minimum_vote_count = 4000
