--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,9 +1,9 @@
 FROM openjdk:14 as build
 WORKDIR /app
 
-COPY build.gradle build.gradle
+COPY build.gradle.kts build.gradle
 COPY gradlew gradlew
-COPY settings.gradle settings.gradle
+COPY settings.gradle.kts settings.gradle
 COPY gradle gradle
 COPY src src
 
