refactor some code, change package name from 'java' to 'kotlin'

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,10 +1,25 @@
-FROM openjdk:14 as build
+FROM openjdk:11-jdk as BUILD
 WORKDIR /app
 
-COPY build.gradle.kts build.gradle
+COPY build.gradle.kts build.gradle.kts
 COPY gradlew gradlew
-COPY settings.gradle.kts settings.gradle
+COPY settings.gradle.kts settings.gradle.kts
 COPY gradle gradle
 COPY src src
 
+ENV REDIS_HOST 0.0.0.0
+
+RUN ./gradlew build --no-daemon -x test
+
+CMD ./gradlew run
+
+#FROM openjdk:11-jdk as BACKEND
+
+#WORKDIR /app
+#COPY --from=BUILD /app/build/ ./build/
+#COPY ./gradlew ./gradlew
+#COPY gradle gradle
+#RUN ls
+
+#RUN ./gradlew run
 
