add kubernetes configurations

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -2,6 +2,8 @@ FROM node:14
 WORKDIR /usr/src/app
 COPY package.json .
 RUN yarn install
-COPY src src
-COPY public public
-CMD yarn start
+COPY ./src ./src
+COPY ./public ./public
+
+RUN ls -la ./public
+CMD ["yarn", "start"]
