continute work on backend suggestions

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -7,7 +7,7 @@ COPY settings.gradle.kts settings.gradle.kts
 COPY gradle gradle
 COPY src src
 
-ENV REDIS_HOST 0.0.0.0
+ENV REDIS_HOST mdg-redis
 
 RUN ./gradlew build --no-daemon -x test
 
