--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.profiles.active=development
 
 tmdb.api_key = ${TMDB_API_KEY:d4e03ad6d78b637ae193537745b35f0d}
 tmdb.minimum_vote_count = 4000
+
+server.servlet.context-path=/api
